Ajutes no App,Config e Controller
Ajuste no .htaccess, arquivo Route movido e ajustando para colcar rotas dentro
e ajustes do RouteCore para poder suportar e ajustar as Rotas

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "test-php/teste-php-via-maquinas",
     "autoload": {
         "psr-4": {
-            "app\\": "app/"
+            "app\\": "app/",
+            "App\\": "app/"
         }
     },
     "require": {}
