--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,4 @@ RewriteBase /
 RewriteCond %{THE_REQUEST} public/([^\s?]*) [NC]
 RewriteRule ^ %1 [L,NE,R=302]
 RewriteRule ^((?!public/).*)$ Teste-php-via-maquinas/public/$1 [L,NC]
+#RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
