--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
             "App\\": "app/"
         }
     },
-    "require": {}
+    "require": {
+        "twig/twig": "^3.3",
+        "vlucas/phpdotenv": "^5.4"
+    }
 }
