Criação,Atualização,Ajustes no Código e Adição de novas bibliotecas Adição das Bibliotecas do Illuminate E Symfony para fazer criação de migrações e melhor usage de models, Modificações em arquivos de configuração para adições de dados fixos do .env para a aplicação, Ajustes no RouteCore para suportar requisições de variaveis via GET Adição a conexão ao banco de dados via Illuminate ao index.php Criação da Migrate de Usuário para criar a tabela ao banco

--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,14 @@
     "name": "test-php/teste-php-via-maquinas",
     "autoload": {
         "psr-4": {
-            "app\\": "app/",
-            "App\\": "app/"
+            "App\\": "app/",
+            "Models\\": "models/"
         }
     },
     "require": {
         "twig/twig": "^3.3",
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "illuminate/database": "^8.75",
+        "illuminate/pagination": "^8.75"
     }
 }
