--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "twig/twig": "^3.3",
         "vlucas/phpdotenv": "^5.4",
         "illuminate/database": "^8.75",
-        "illuminate/pagination": "^8.75"
+        "illuminate/pagination": "^8.75",
+        "illuminate/support": "^8.75"
     }
 }
